<resources>
    <string name="app_name">Dunia Islam</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Halaman Utama -->
    <string name="alquran">Al Quran</string>
    <string name="doa_harian">Doa Harian</string>
    <string name="asmaul_husna">Asmaul Husna</string>
    <string name="niat_sholat">Niat Sholat</string>

    <!--  Info  -->
    <string name="namaAuthor">Wahyu Widodo</string>
    <string name="asalAuthor">Purbalingga, Jawa Tengah</string>
    <string name="descApps1"><b>Dunia Islam</b> merupakan sebuah aplikasi mobile android yang dibuat untuk mempermudah akses pendidikan, khususnya dalam pendidikan islam.</string>
    <string name="descApps2">Terima kasih telah menggunakan aplikasi ini.</string>
    <string name="descApps3">Semoga bermanfaat.</string>
    <string name="descApps4">Copyright 2021 by Wahyu Widodo</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>