<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="5dp"
    android:layout_gravity="center">
        <TextView
            android:id="@+id/txtClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textColor="@color/white"
            android:text="X"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:gravity="center"
            android:background="@drawable/ic_circle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/descApps1"
                android:textSize="12sp"
                android:textColor="@color/grey2"
                android:fontFamily="@font/poppins"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="1dp"
                android:text="@string/descApps2"
                android:textSize="12sp"
                android:textColor="@color/grey2"
                android:fontFamily="@font/poppins"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="1dp"
                android:text="@string/descApps3"
                android:textSize="12sp"
                android:textColor="@color/grey2"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/descApps4"
                android:textSize="10sp"
                android:textStyle="italic"
                android:layout_gravity="end"
                android:textColor="@color/grey3"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>
</LinearLayout>